# kebisafe

./: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  .stylelintrc.json  Cargo.toml  Dockerfile  Kebisafe.sxcu  README.md  package.json  tsconfig.json  webpack.config.js  yarte.toml
.github/workflows/: docker.yml
assets/scripts/: index.ts
migrations/: 20210325201700_create_media.sql  20210326160300_add_indices.sql
src/: application.rs  entity.rs  log.rs  main.rs  middleware.rs  protection.rs  session.rs
src/action/: database.rs  media.rs  mod.rs  session.rs
src/api/: endpoint.rs  mod.rs  schema.rs
src/endpoint/: auth.rs  media.rs  mod.rs
src/template/: mod.rs
src/web/: mod.rs  multipart.rs  session.rs
src/web/endpoint/: auth.rs  media.rs  mod.rs
templates/: index.html.hbs  media-list.html.hbs  media.html.hbs  signin.html.hbs
templates/components/: __header.html.hbs  flashes.html.hbs  navbar.html.hbs
templates/m/: hash-id.html.hbs  index.html.hbs
workflows/: docker.yml
