[package]
name = "kebisafe"
version = "0.5.0"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# Dependencies - std extensions

[dependencies.anyhow]
version = "1.0.38"

[dependencies.once_cell]
version = "1.7.2"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.regex]
version = "1.4.5"

[dependencies.rand]
version = "0.8.3"

[dependencies.image]
version = "0.23.14"

[dependencies.argon2]
version = "0.1.4"

[dependencies.aes-gcm-siv]
version = "0.9.0"

[dependencies.password-hash]
version = "0.1.2"

[dependencies.data-encoding]
version = "2.3.2"

# Dependencies - CLI

[dependencies.log]
version= "0.4.14"

[dependencies.pretty_env_logger]
version = "0.4.0"

[dependencies.dotenv]
version = "0.15.0"

[dependencies.clap]
version = "3.0.0-beta.2"

[dependencies.rpassword]
version = "5.0.1"

# Dependencies - serde

[dependencies.serde]
version = "1.0.124"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.64"

[dependencies.serde_urlencoded]
version = "0.7.0"

[dependencies.envy]
version = "0.4.2"

# Dependencies - async

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]

[dependencies.async-trait]
version = "0.1.48"

[dependencies.futures]
version = "0.3.13"

[dependencies.sqlx]
version = "0.5.1"
features = ["runtime-async-std-native-tls", "sqlite", "postgres", "chrono"]

[dependencies.redis]
version = "0.20.0"
features = ["async-std-comp"]

# Dependencies - Web

[dependencies.tide]
version = "0.16.0"

[dependencies.url]
version = "2.2.1"

[dependencies.mime_guess]
version = "2.0.3"

# TODO: Consider about async variants
[dependencies.multipart]
version = "0.17.1"
default-features = false
features = ["server"]

[dependencies.yarte]
version = "0.15.3"

# Build dependencies

[build-dependencies.yarte]
version = "0.15.3"

# Other

[profile.dev.package.image]
opt-level = 3
