[package]
name = "kebisafe"
version = "0.6.1"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.43"
once_cell = "1.8.0"
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.5.4"
rand = "0.8.4"
image = "0.23.14"
argon2 = "0.2.3"
aes-gcm-siv = "0.10.2"
password-hash = "0.2.2"
data-encoding = "2.3.2"
log = "0.4.14"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
clap = "3.0.0-beta.2"
rpassword = "5.0.1"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
serde_urlencoded = "0.7.0"
envy = "0.4.2"
async-std = { version = "1.9.0", features = ["attributes"] }
async-trait = "0.1.51"
async-ctrlc = "1.2.0"
futures = "0.3.16"
sqlx = { version = "0.5.5", features = ["runtime-async-std-native-tls", "sqlite", "postgres", "chrono"] }
redis = { version = "0.21.0", features = ["async-std-comp"] }
tide = "0.16.0"
url = "2.2.2"
mime_guess = "2.0.3"
multipart = { version = "0.18.0", default-features = false, features = ["server"] }
yarte = "0.15.4"

[build-dependencies]
yarte = "0.15.4"

[profile.dev.package.image]
opt-level = 3
