[package]
name = "kebisafe"
version = "0.6.2"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
aes-gcm-siv = "0.10.3"
anyhow = "1.0.57"
argon2 = "0.4.0"
async-ctrlc = "1.2.0"
async-std = { version = "1.11.0", features = ["attributes"] }
async-trait = "0.1.53"
clap = { version = "3.1.12", features = ["derive"] }
data-encoding = "2.3.2"
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.21"
image = "0.24.1"
log = "0.4.16"
mime_guess = "2.0.4"
multipart = { version = "0.18.0", default-features = false, features = ["server"] }
once_cell = "1.10.0"
password-hash = "0.4.1"
rand = "0.8.5"
redis = { version = "0.21.5", features = ["async-std-comp"] }
regex = "1.5.5"
rpassword = "6.0.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.5.13", features = ["runtime-async-std-native-tls", "sqlite", "postgres", "chrono"] }
tide = "0.17.0-beta.1"
url = "2.2.2"
yarte = { git = "https://github.com/botika/yarte", branch = "master" }

chrono = { version = "0.4.19", features = ["serde"] }
pretty_env_logger = "0.4.0"


[build-dependencies]
yarte = { git = "https://github.com/botika/yarte", branch = "master" }

[profile.dev.package.image]
opt-level = 3
